--- a/WebApplication1/Areas/Admin/Views/Tag/Delete.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tag/Delete.cshtml
@@ -1,26 +1,8 @@
-﻿@model WebApplication1.Models.Tag
+@model WebApplication1.Models.Tag
 
 @{
-    ViewData["Title"] = "Delete Tag";
+    ViewBag.Title = "title";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete Tag</h2>
-<hr />
-
-<div class="alert alert-danger">
-    <h4>Are you sure you want to delete this tag?</h4>
-</div>
-
-<div>
-    <dl class="row">
-        <dt class="col-sm-2">Name</dt>
-        <dd class="col-sm-10">@Model.Name</dd>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
-    </form>
-</div>
+<h2>title</h2>
